add_subdirectory(arrays)
add_subdirectory(assignment)
add_subdirectory(comments)
add_subdirectory(conditionals)
add_subdirectory(constants)
add_subdirectory(control-flow)
add_subdirectory(equality)
add_subdirectory(examples)
add_subdirectory(functions)
add_subdirectory(io)
add_subdirectory(literals)
add_subdirectory(math)
add_subdirectory(operators)
add_subdirectory(types)
add_subdirectory(variables)
add_subdirectory(whitespace)
